adding the 3rd exercise

--- a/Final-Project.ipynb
+++ b/Final-Project.ipynb
@@ -15,38 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Analyzing file: BRK-A.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_15700\\3700034561.py:44: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
-      "  data['Close'] = data['Close'].fillna(method='ffill').fillna(method='bfill')\n",
-      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_15700\\3700034561.py:44: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  data['Close'] = data['Close'].fillna(method='ffill').fillna(method='bfill')\n",
-      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_15700\\3700034561.py:44: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
-      "  data['Close'] = data['Close'].fillna(method='ffill').fillna(method='bfill')\n",
-      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_15700\\3700034561.py:44: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  data['Close'] = data['Close'].fillna(method='ffill').fillna(method='bfill')\n",
-      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_15700\\3700034561.py:44: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
-      "  data['Close'] = data['Close'].fillna(method='ffill').fillna(method='bfill')\n",
-      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_15700\\3700034561.py:44: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  data['Close'] = data['Close'].fillna(method='ffill').fillna(method='bfill')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Analyzing file: BRK-A.csv\n",
       "Analyzing file: DNUT.csv\n",
       "Analyzing file: DPZ.csv\n",
       "Analyzing file: LKNCY.csv\n"
@@ -56,13 +32,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_15700\\3700034561.py:44: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_3620\\3700034561.py:44: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  data['Close'] = data['Close'].fillna(method='ffill').fillna(method='bfill')\n",
-      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_15700\\3700034561.py:44: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_3620\\3700034561.py:44: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  data['Close'] = data['Close'].fillna(method='ffill').fillna(method='bfill')\n",
-      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_15700\\3700034561.py:44: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_3620\\3700034561.py:44: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  data['Close'] = data['Close'].fillna(method='ffill').fillna(method='bfill')\n",
-      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_15700\\3700034561.py:44: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_3620\\3700034561.py:44: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  data['Close'] = data['Close'].fillna(method='ffill').fillna(method='bfill')\n",
+      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_3620\\3700034561.py:44: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  data['Close'] = data['Close'].fillna(method='ffill').fillna(method='bfill')\n",
+      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_3620\\3700034561.py:44: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  data['Close'] = data['Close'].fillna(method='ffill').fillna(method='bfill')\n",
+      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_3620\\3700034561.py:44: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  data['Close'] = data['Close'].fillna(method='ffill').fillna(method='bfill')\n",
+      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_3620\\3700034561.py:44: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  data['Close'] = data['Close'].fillna(method='ffill').fillna(method='bfill')\n"
      ]
     },
@@ -71,24 +55,29 @@
      "output_type": "stream",
      "text": [
       "Analyzing file: MCD.csv\n",
-      "Analyzing file: PZZA.csv\n"
+      "Analyzing file: PZZA.csv\n",
+      "Analyzing file: QSR.csv\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_15700\\3700034561.py:44: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_3620\\3700034561.py:44: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  data['Close'] = data['Close'].fillna(method='ffill').fillna(method='bfill')\n",
-      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_15700\\3700034561.py:44: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_3620\\3700034561.py:44: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  data['Close'] = data['Close'].fillna(method='ffill').fillna(method='bfill')\n",
-      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_15700\\3700034561.py:44: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_3620\\3700034561.py:44: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  data['Close'] = data['Close'].fillna(method='ffill').fillna(method='bfill')\n",
-      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_15700\\3700034561.py:44: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_3620\\3700034561.py:44: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  data['Close'] = data['Close'].fillna(method='ffill').fillna(method='bfill')\n",
-      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_15700\\3700034561.py:44: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_3620\\3700034561.py:44: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  data['Close'] = data['Close'].fillna(method='ffill').fillna(method='bfill')\n",
-      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_15700\\3700034561.py:44: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_3620\\3700034561.py:44: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  data['Close'] = data['Close'].fillna(method='ffill').fillna(method='bfill')\n",
+      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_3620\\3700034561.py:44: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "  data['Close'] = data['Close'].fillna(method='ffill').fillna(method='bfill')\n",
+      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_3620\\3700034561.py:44: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  data['Close'] = data['Close'].fillna(method='ffill').fillna(method='bfill')\n"
      ]
     },
@@ -96,7 +85,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Analyzing file: QSR.csv\n",
       "Analyzing file: SBUX.csv\n",
       "Analyzing file: WEN.csv\n",
       "Analyzing file: YUM.csv\n"
@@ -106,13 +94,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_15700\\3700034561.py:44: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_3620\\3700034561.py:44: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  data['Close'] = data['Close'].fillna(method='ffill').fillna(method='bfill')\n",
-      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_15700\\3700034561.py:44: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_3620\\3700034561.py:44: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  data['Close'] = data['Close'].fillna(method='ffill').fillna(method='bfill')\n",
-      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_15700\\3700034561.py:44: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
+      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_3620\\3700034561.py:44: FutureWarning: Series.fillna with 'method' is deprecated and will raise in a future version. Use obj.ffill() or obj.bfill() instead.\n",
       "  data['Close'] = data['Close'].fillna(method='ffill').fillna(method='bfill')\n",
-      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_15700\\3700034561.py:44: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\ghaza\\AppData\\Local\\Temp\\ipykernel_3620\\3700034561.py:44: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  data['Close'] = data['Close'].fillna(method='ffill').fillna(method='bfill')\n"
      ]
     }
@@ -180,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -567,6 +555,74 @@
     "        plt.show()\n",
     "    else:\n",
     "        print(f\"No data for 2023 in {file_name}. Skipping visualization.\")\n",
+    "    \n",
+    "    print(\"-\" * 40)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. For each company, find the day with the highest Close price and display it alongside the price."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing file: BRK-A.csv\n",
+      "Highest Close price for BRK-A.csv: 463000.0 on 2022-12-09 00:00:00\n",
+      "----------------------------------------\n",
+      "Processing file: DNUT.csv\n",
+      "Highest Close price for DNUT.csv: 18.200000762939453 on 2021-07-08 00:00:00\n",
+      "----------------------------------------\n",
+      "Processing file: DPZ.csv\n",
+      "Highest Close price for DPZ.csv: 564.3300170898438 on 2021-12-31 00:00:00\n",
+      "----------------------------------------\n",
+      "Processing file: LKNCY.csv\n",
+      "Highest Close price for LKNCY.csv: 45.900001525878906 on 2020-01-13 00:00:00\n",
+      "----------------------------------------\n",
+      "Processing file: MCD.csv\n",
+      "Highest Close price for MCD.csv: 199.2700042724609 on 2019-10-22 00:00:00\n",
+      "----------------------------------------\n",
+      "Processing file: PZZA.csv\n",
+      "Highest Close price for PZZA.csv: 132.60000610351562 on 2021-12-23 00:00:00\n",
+      "----------------------------------------\n",
+      "Processing file: QSR.csv\n",
+      "Highest Close price for QSR.csv: 82.75 on 2024-03-13 00:00:00\n",
+      "----------------------------------------\n",
+      "Processing file: SBUX.csv\n",
+      "Highest Close price for SBUX.csv: 126.05999755859376 on 2021-07-26 00:00:00\n",
+      "----------------------------------------\n",
+      "Processing file: WEN.csv\n",
+      "Highest Close price for WEN.csv: 32.0 on 1993-09-13 00:00:00\n",
+      "----------------------------------------\n",
+      "Processing file: YUM.csv\n",
+      "Highest Close price for YUM.csv: 143.19000244140625 on 2024-04-29 00:00:00\n",
+      "----------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3\n",
+    "\n",
+    "# Iterate through all datasets in data_dict\n",
+    "for file_name, data in data_dict.items():\n",
+    "    print(f\"Processing file: {file_name}\")\n",
+    "    \n",
+    "    # Find the row with the highest Close price\n",
+    "    if not data.empty:\n",
+    "        max_close_row = data.loc[data['Close'].idxmax()]\n",
+    "        highest_date = max_close_row['Date']\n",
+    "        highest_price = max_close_row['Close']\n",
+    "        print(f\"Highest Close price for {file_name}: {highest_price} on {highest_date}\")\n",
+    "    else:\n",
+    "        print(f\"No valid Close data in {file_name}.\")\n",
     "    \n",
     "    print(\"-\" * 40)\n"
    ]
